samples/_failures_safe/1760886197_23cf31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae1ba6ab.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ae1ba6ab.c:172:5: error: expected expression at end of input
  172 |     while (input[pos] !=
      |     ^~~~~
./samples/SAFE/__tmp_ae1ba6ab.c:172:5: error: expected declaration or statement at end of input
